--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
     "version": "0.0.1",
     "name": "com.powerall.plugin.updateapp",
     "cordova_name": "UpdateApp",
-    "description": "Powerall update app plugin description",
+    "description": "auto update app plugin description",
     "license": "Apache 2.0",
     "keywords": [
         "powerall",
-        "update all",
+        "auto update",
         "liujie"
     ],
     "engines": []
