--- a/plugin.xml
+++ b/plugin.xml
@@ -11,7 +11,7 @@
     <license>Apache 2.0</license>
 	<keywords>powerall,updateapp,powerall</keywords>
 	
-	<js-module src="www/UpdateAppPlugin.js" name="UpdateAppPlugin">
+	<js-module src="www/updateAppPlugin.js" name="UpdateAppPlugin">
 		<clobbers target="updateApp" />
 	</js-module>
 
