--- a/plugin.xml
+++ b/plugin.xml
@@ -24,7 +24,8 @@
         </config-file>
 
         <config-file target="AndroidManifest.xml" parent="/*">
-    		<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />			
+    		<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+			<uses-permission android:name="android.permission.INTERNET" />
         </config-file>
 
         <source-file src="src/android/UpdateAppPlugin.java" target-dir="src/com/powerall/plugin/updateapp" />
